--- a/student.html
+++ b/student.html
@@ -89,7 +89,7 @@
             <b>PROGRAM CODE:</b> CDIM262<br>
             <b>FACULTY:</b> FACULTY OF COMPUTING, INFORMATICS, AND MATHEMATICS<br>
             <b>SUBMISSION DATE:</b> WEEK 12 <br>
-            <b>PUBLISHED URL:</b> <br>
+            <b>PUBLISHED URL:</b> <a href="https://jolieqah2003.github.io/E-Resume/index.html"> CLICK HERE</a> <br>
             </p>       
          </div>   
 </body>
